# cmake-init-modules

./: .CMakeUserPresets.json  .build-errors.txt  .clang-format  .clang-tidy  .cmake-format  .cmake-format.json  .envrc  .gitignore  .gitmodules  .notes.txt  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.jsonnet  GNUmakefile  HACKING.md  README.md  algo-impl.cpp  algo-interface.cppm  conanfile.py  gcovr.cfg  requirements.txt
.github/scripts/: conan-profile.sh
.github/workflows/: ci.yml
cmake/: AddUninstallTarget.cmake  CPM.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  my_package-config.cmake  spell-targets.cmake  spell.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp  main.cpp
include/cmake-init-modules/: cmake-init-modules.hpp
source/: cmake-init-modules.cpp
std/: .CMakeLists.txt  CMakeLists.txt  GNUmakefile  main.cpp  main.cxx  uses_std.cxx
test/: CMakeLists.txt
test/source/: cmake-init-modules_test.cpp
